--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "lint": "eslint **/*.js",
+    "test": "jest --verbose --coverage",
+    "test-watch": "jest --watchAll --verbose --coverage --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -17,9 +20,10 @@
   },
   "homepage": "https://github.com/401-advanced-javascript-joel/Lab-07-Express-Server#readme",
   "dependencies": {
+    "eslint": "^6.8.0",
     "express": "^4.17.1",
+    "express-swagger-generator": "^1.1.17",
     "jest": "^25.2.7",
-    "js-doc": "^0.5.0",
-    "supergoose": "^0.2.6"
+    "supertest": "^4.0.2"
   }
 }
