--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "lab-07",
+  "name": "express-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon -r dotenv/config index.js",
     "lint": "eslint **/*.js",
-    "test": "jest --verbose --coverage",
-    "test-watch": "jest --watchAll --verbose --coverage --detectOpenHandles"
+    "test": "jest --verbose --coverage --detectOpenHandles --runInBand",
+    "test-watch": "jest --watchAll --verbose --coverage --detectOpenHandles --runInBand"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "repository": {
     "type": "git",
@@ -20,10 +24,15 @@
   },
   "homepage": "https://github.com/401-advanced-javascript-joel/Lab-07-Express-Server#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
     "express-swagger-generator": "^1.1.17",
     "jest": "^25.2.7",
+    "mongodb-memory-server": "^6.5.2",
+    "mongoose": "^5.9.7",
+    "morgan": "^1.10.0",
     "supertest": "^4.0.2"
   }
 }
